--- a/trunk/linux-4.4.x/arch/mips/boot/dts/ralink/mt7621-spi-32m-layout.dtsi
+++ b/trunk/linux-4.4.x/arch/mips/boot/dts/ralink/mt7621-spi-32m-layout.dtsi
@@ -29,9 +29,9 @@
 			reg = <0x50000 0x1f30000>;
 		};
 
-		partition@1f80000 {
+		partition@1000000 {
 			label = "Storage";
-			reg = <0x1f80000 0x80000>; /* 512K */
+			reg = <0x1000000 0x1000000>; /* 512K */
 		};
 
 		partition@all {
