--- a/trunk/configs/templates/K2P.config
+++ b/trunk/configs/templates/K2P.config
@@ -247,6 +247,9 @@ CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y
 ### Include xray  ~4.5M
 CONFIG_FIRMWARE_INCLUDE_XRAY=n
 
+### Include lucky ~50k
+CONFIG_FIRMWARE_INCLUDE_LUCKY=y
+
 ### Include v2ray
 CONFIG_FIRMWARE_INCLUDE_V2RAY=n
 
