--- a/trunk/configs/templates/K2P.config
+++ b/trunk/configs/templates/K2P.config
@@ -241,7 +241,7 @@ CONFIG_FIRMWARE_INCLUDE_FRPS=n
 CONFIG_FIRMWARE_INCLUDE_REDSOCKS=n
 
 ### Include Shadowsocks
-CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=n
+CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y
 
 ### Include xray  ~4.5M
 CONFIG_FIRMWARE_INCLUDE_XRAY=n
@@ -260,6 +260,9 @@ CONFIG_FIRMWARE_INCLUDE_SINGBOX=n
 
 ### Include naiveproxy
 CONFIG_FIRMWARE_INCLUDE_NAIVEPROXY=n
+
+### Include kumasocks
+CONFIG_FIRMWARE_INCLUDE_KUMASOCKs=y
 
 ### Include adbyby plus+
 CONFIG_FIRMWARE_INCLUDE_ADBYBY=n
