--- a/trunk/user/smartdns/Makefile
+++ b/trunk/user/smartdns/Makefile
@@ -6,7 +6,7 @@ PKG_VERSION:=1.2025.46.2
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://www.github.com/pymumu/smartdns.git
 PKG_SOURCE_VERSION:=64fc9f20fba0e14cb118fe7f145557971cafd858
-PKG_MIRROR_HASH:=skip
+PKG_MIRROR_HASH:=204521b2525f27ba1c0bdde797bdf37fae83842cffa0af5f358533d604853e7b
 
 include $(INCLUDE_DIR)/package.mk
 
